# texteditor

./: .gitignore  CMakeLists.txt  config.h  editor.c
